--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,7 +161,7 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-target_link_libraries(navigation_goal ${catkin_LIBRARIES})
+#target_link_libraries(navigation_goal ${catkin_LIBRARIES})
 
 #############
 ## Install ##
